objects/ssot__LocationProductInventory__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Location Product Inventory Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryItemNumber__c</fullName>
        <label>Inventory Item Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryLocationId__c</fullName>
        <label>Inventory Location</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OnHandQuantity__c</fullName>
        <label>On Hand Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerObject__c</fullName>
        <label>Owner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityUOM__c</fullName>
        <label>Quantity Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SerialNumber__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432560059_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocationProductInventory_OwnerId_map_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>LocationProductInventory_OwnerId_map_rel</relationshipLabel>
        <relationshipName>rel_1710432560059_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432579931_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocationProductInventory_InventoryLo_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>LocationProductInventory_InventoryLo_rel</relationshipLabel>
        <relationshipName>rel_1710432579931_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726627270_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocationProductInventory_LastModifie_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>LocationProductInventory_LastModifie_rel</relationshipLabel>
        <relationshipName>rel_1716726627270_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>